--- a/scripts/data_analysis/Keeling_plots.Rmd
+++ b/scripts/data_analysis/Keeling_plots.Rmd
@@ -35,7 +35,7 @@ library(wesanderson)
 ```
 
 
-```{r reading in & prepping data}
+```{r reading in & prepping pH data}
 
 raw <- read_xlsx("data/13CH_Incubation_Summary_AllData_10.21.25.xlsx", sheet="pH_exp")
 
@@ -158,7 +158,120 @@ for (s in unique(data.plot$soil_type)) {
       labs(color = "Timepoint")
     
     # Save each plot
-    filename <- sprintf("figures/keeling/Keeling_%s_pH%s.png", s, p)
+    filename <- sprintf("figures/isotopes/keeling/Keeling_%s_pH%s.png", s, p)
+    ggsave(filename, p_plot, width = 9, height = 6.5)
+  }
+}
+
+```
+
+```{r dobule checking y-intercepts}
+
+lm <- lm(d13C_permil ~ CO2_ppm_inverse,
+         data = subset(data.plot, soil_type == "Ground Rock" & pH_treatment == "Dry control"))
+summary(lm)
+
+```
+
+
+## Keeling plots for H2O exp 
+
+```{r reading in & prepping H2O data}
+
+raw <- read_xlsx("data/13CH_Incubation_Summary_AllData_10.21.25.xlsx", sheet="H2O_exp")
+
+data <- raw %>% 
+  select(jar_num:sample_code,T1_CO2_ppm,T2_CO2_ppm,T1_d13C_permil,T2_d13C_permil) %>% 
+  mutate(
+    across(c(soil_type,H2O_treatment,jar_type,rep), as.factor),
+    across(c(T2_CO2_ppm,T2_d13C_permil), as.numeric),
+    soil_type = factor(soil_type, levels = c("Unamended", "Ground Rock")),  # Relevel soil_type for plotting
+    pH_treatment = fct_relevel(H2O_treatment, c("no","yes") ),
+    T1_CO2_ppm_inverse = 1/T1_CO2_ppm,
+    T2_CO2_ppm_inverse = 1/T2_CO2_ppm
+    ) 
+
+data <- data %>%
+  pivot_longer(
+    cols = c(T1_CO2_ppm, T2_CO2_ppm, T1_d13C_permil, T2_d13C_permil, T1_CO2_ppm_inverse, T2_CO2_ppm_inverse),
+    names_to = c("timepoint", "variable"),
+    names_pattern = "^(T\\d+)_(.*)$",   # Capture T1/T2 as timepoint and the rest as variable
+    values_to = "value"
+  )
+
+data <- data %>%
+  pivot_wider(
+    names_from = variable,
+    values_from = value
+  )
+
+data.plot <- data %>% 
+  filter(jar_type == "Exp") 
+
+```
+
+```{r individual soil & H2O treatment combo plots}
+
+library(ggplot2)
+library(dplyr)
+
+# Loop through combinations of soil type and pH treatment
+for (s in unique(data.plot$soil_type)) {
+  for (t in unique(data.plot$H2O_treatment)) {
+    
+    # Subset data
+    subset_data <- data.plot %>%
+      filter(soil_type == s, H2O_treatment == t)
+    
+    # Fit linear model
+    model <- lm(d13C_permil ~ CO2_ppm_inverse, data = subset_data)
+    
+    # Extract coefficients
+    intercept <- coef(model)[1]
+    slope <- coef(model)[2]
+    r2 <- summary(model)$r.squared
+    
+    # Create text label for equation
+    # eqn <- sprintf("y = %.3f x + %.3f\nR² = %.3f", slope, intercept, r2) text showing the full equation and R2
+    eqn <- sprintf("y-intercept = %.2f", intercept)
+    
+    # Make plot
+    p_plot <- ggplot(subset_data, aes(x = CO2_ppm_inverse, y = d13C_permil, color = timepoint)) +
+      geom_point() +
+      stat_smooth(method = "lm", se = FALSE, color = "black") +
+      labs(
+        title = paste0("Keeling plot - ", "Soil: ", s, " H2O: ", t),
+        y = "*&delta;*<sup>13</sup>C of CO<sub>2</sub> (&permil;)",
+        x = "1/[CO<sub>2</sub>] (ppm<sup>-1</sup>)"
+      ) +
+      scale_color_manual(values=wes_palette("Darjeeling1", 2) ) +
+      theme_bw() +
+      theme(
+        axis.title.y = element_markdown(),
+        axis.title.x = element_markdown(),
+        plot.title = element_text(hjust = 0.5,size = 20), # Title text size
+        # axis.title.x = element_text(size = 14),      # X-axis title text size
+        # axis.title.y = element_text(size = 14),      # Y-axis title text size
+        axis.text.x = element_text(size = 12),       # X-axis text size
+        axis.text.y = element_text(size = 12),       # Y-axis text size
+        legend.title = element_text(size = 14),      # Legend title text size
+        legend.text = element_text(size = 12),        # Legend text size
+      ) +
+      annotate(
+        "label",
+        # x = Inf, y = -Inf,          # place in bottom-right corner
+        x = min(subset_data$CO2_ppm_inverse, na.rm = TRUE) + 0.05 * diff(range(subset_data$CO2_ppm_inverse, na.rm = TRUE)),
+        y = min(subset_data$d13C_permil, na.rm = TRUE) + 0.05 * diff(range(subset_data$d13C_permil, na.rm = TRUE)),
+        label = eqn,
+        hjust = 0, vjust = 0,
+        size = 3.5,
+        color = "black",
+        fill = "white"
+      ) +
+      labs(color = "Timepoint")
+    
+    # Save each plot
+    filename <- sprintf("figures/isotopes/keeling/Keeling_%s_H2O%s.png", s, t)
     ggsave(filename, p_plot, width = 9, height = 6.5)
   }
 }
@@ -166,9 +279,13 @@ for (s in unique(data.plot$soil_type)) {
 
 ```
 
+```{r}
 
-## Keeling plots for H2O exp 
+lm <- lm(d13C_permil ~ CO2_ppm_inverse,
+         data = subset(data.plot, soil_type == "Ground Rock" & H2O_treatment == "no"))
+summary(lm)
 
+```
 
 
 ## Keeling plot intercepts summary figure 
